[tool.poetry]
name = "pdf2odt"
version = "1.0.0"
description = "Converts a pdf into a Libreoffice Writer document, with images resized to A4 and anchored as character"
authors = ["turulomio <turulomio@yahoo.es>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"
tqdm = "^4.67.1"
unogenerator = "^1.0.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.9"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pdf2odt='pdf2odt.core:main'

[tool.poe.tasks]
test = { script = "pdf2odt.poethepoet:test" }
coverage = { script = "pdf2odt.poethepoet:coverage" }
release = { script = "pdf2odt.poethepoet:release" }
translate = { script = "pdf2odt.poethepoet:translate" }
